kubernets/namespace.yaml
apiVersion: v1  
kind: Namespace
metadata:
  name: spring
  labels:
    name: test
