kubernets/appsev.yaml
apiVersion: v1
kind: Service
metadata:
  name: springapp-srv
  namespace: spring
spec:
  # type: NodePort
  ports:
  - name: app-service
    port: 8989
    targetPort: 8989
    # nodePort: 31000
  selector:
    app: spring-app
