kubernets/databaseservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-service
  name: db-service
  namespace: spring
spec:
  type: ClusterIP
  ports:
  - name: db-service
    port: 27017
    targetPort: 27017
  selector:
    app: db-service
